refactor: code reformat